--- a/wp4/package.json
+++ b/wp4/package.json
@@ -9,7 +9,7 @@
     "muti": "webpack --config ./muti-entry.config.js",
     "dev": "webpack-dev-server",
     "dev-o": "webpack-dev-server --open",
-    "debug": "node --inspect-brk node_modules/webpack/bin/webpack --config ./webpack.config.js"
+    "debug": "node --inspect-brk=8585 node_modules/webpack/bin/webpack --config ./webpack.config.js"
   },
   "keywords": [
     "test"
@@ -24,7 +24,7 @@
     "autoprefixer": "^9.4.7",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^4.6.0",
+    "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^2.1.0",
     "csv-loader": "^3.0.2",
     "expose-loader": "^0.7.5",
@@ -35,21 +35,21 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "papaparse": "^4.5.0",
+    "papaparse": "^5.2.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.5.2",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-dev-server": "^3.11.0",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "jquery": "^3.3.1",
-    "lodash": "^4.17.11",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.15",
     "zui": "^1.8.1"
   }
 }
